--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "multer": "^2.0.0-rc.1",
+    "nodemailer": "^6.7.1",
     "nodemon": "^2.0.15",
     "twilio": "^3.71.2",
     "validator": "^13.7.0"
